--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<title>Talis Holdings</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/x-icon" href="./assets/images/logo1.png">
+	<link rel="icon" type="image/x-icon" href="./assets/images/talis-holdings-logo.jpg">
 	<link rel="stylesheet" href="./assets/css/font-awesome.min.css">
 </head>
 <body>
